feat(etablissement): affichage du descriptif original avec les formulaires personnalisés (#159)
Co-authored-by: Maxime Merrien <maxime.merrien@atos.net>

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -163,7 +163,7 @@ endif ?>
             <?php if($this->enteteEtab) : ?>
                 Etablissement(s) concerné(s) :
                 <a
-                    href= <?= '/etablissement/descriptif/id/'.$this->enteteEtab['ID_ETABLISSEMENT']?>
+                    href=<?= '/etablissement/descriptif/id/'.$this->enteteEtab['ID_ETABLISSEMENT'].'?hideButton=true' ?>
                     data-target='#modal-desc'
                     data-toggle='modal'
                     id='descEtab'
@@ -256,7 +256,7 @@ endif ?>
                             $idEtabEnCour = $value['ID_ETABLISSEMENTDOSSIER'];
                         ?>
                             <a
-                                href=<?= '/etablissement/descriptif/id/'.$value['ID_ETABLISSEMENT'] ?>
+                                href=<?= '/etablissement/descriptif/id/'.$value['ID_ETABLISSEMENT'].'?hideButton=true' ?>
                                 data-target='#modal-desc'
                                 data-toggle='modal'
                                 id='descEtab'
