Meilleur affichage en lecture de l'ensemble des champs

--- a/public/css/formulaire/descriptif.css
+++ b/public/css/formulaire/descriptif.css
@@ -4,6 +4,10 @@
     margin-left: 1rem;
 }
 
+#descriptif-personnalise .form-horizontal .control-label {
+    padding-top: 0;
+}
+
 .descriptif-personnalise--header {
     display: flex;
     align-items: center;
