Adaptation suite au merge

--- a/application/views/scripts/formulaire/partials/partial-input-champ-null.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ-null.phtml
@@ -2,7 +2,8 @@
     case 1:
     case 2:
     case 3:
-    case 4: ?>
+    case 4:
+    case 7: ?>
         <span class="muted">Aucune donnée</span>
     <?php default:
         break;
