--- a/application/views/scripts/formulaire/partials/partial-input-champ-not-null.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ-not-null.phtml
@@ -9,6 +9,10 @@
         echo nl2br(htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES));
 
         break;
+    case 7:
+        echo htmlspecialchars(Service_Utils_Date::formatDateWithDayName($this->champ['VALEUR']), ENT_QUOTES);
+
+        break;
     default:
         break;
 } ?>
