--- a/public/css/formulaire/tableauInputParent.css
+++ b/public/css/formulaire/tableauInputParent.css
@@ -1,34 +1,26 @@
 .tableInput {
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .colTableInput {
     width: auto;
     display: flex;
     flex-flow: column;
-    margin: auto 1em;
-}
-
-.colTableInput:first-child {
-    margin-left: 0;
 }
 
 .colDate {
     display: flex;
+    gap: .5rem;
+}
+
+.colTableInput .colDate,
+td .colDate {
     flex-direction: column;
-    align-items: center;
-    width: 200px;
 }
 
-.colDate input,
-.colDate button {
-    width: 100%;
-    box-sizing: border-box; 
+.colTableInput .colDate input,
+td .colDate input {
+    width: auto;
 }
-
-.colDate input {
-    margin-bottom: 5px; 
-}
-
-
