--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -326,7 +326,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                                             addChamp($segmentTableau, sprintf('valeur%d', $index), '');
                                         }
                                     }
-                                    
+
                                     $segmentTableau->merge();
                                 } else {
                                     foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -339,15 +339,14 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                                                 } else {
                                                     $col['VALEUR'] = 'Non';
                                                 }
-                                            }
-                                            else{
-                                                // Définition du libellé pour les dates 
+                                            } else {
+                                                // Définition du libellé pour les dates
                                                 if ('Date' === $col['TYPE']) {
                                                     if ($col['VALEUR'] !== null) {
                                                         $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
                                                         $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                                    }else{
-                                                        $col['VALEUR']= "";
+                                                    } else {
+                                                        $col['VALEUR'] = "";
                                                     }
                                                 }
                                             }
@@ -355,7 +354,6 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                                             addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                             $idxCol++;
                                         }
-                                        
 
                                         $segmentTableau->merge();
                                     }
@@ -371,15 +369,14 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                                     } else {
                                         $champFils['VALEUR'] = 'Non';
                                     }
-                                }
-                                else{
-                                    // Définition du libellé pour les dates 
+                                } else {
+                                    // Définition du libellé pour les dates
                                     if ('Date' === $champFils['TYPE']) {
-                                        if (!empty($champFils['VALEUR'])) {
+                                        if ($champFils['VALEUR'] !== null) {
                                             $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
                                             $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                        }else{
-                                            $champFils['VALEUR']= "";
+                                        } else {
+                                            $champFils['VALEUR'] = "";
                                         }
                                     }
                                 }
@@ -405,15 +402,14 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                             } else {
                                 $champ['VALEUR'] = 'Non';
                             }
-                        }
-                        else{
-                            // Définition du libellé pour les dates 
+                        } else {
+                            // Définition du libellé pour les dates
                             if ('Date' === $champ['TYPE']) {
-                                if (!empty($champ['VALEUR'])) {
+                                if ($champ['VALEUR'] !== null) {
                                     $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
                                     $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                }else{
-                                    $champ['VALEUR']= "";
+                                } else {
+                                    $champ['VALEUR'] = "";
                                 }
                             }
                         }
@@ -429,7 +425,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                             $champ['VALEUR']
                         );
                     }
-                    
+
                 }
             }
         }
