--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -222,7 +222,7 @@ foreach($this->membresFiles as $val => $membre){
                                                                 addChamp($segmentTableau, sprintf('valeur%d', $index), '');
                                                             }
                                                         }
-                                                        
+
                                                         $segmentTableau->merge();
                                                     } else {
                                                         foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -235,15 +235,14 @@ foreach($this->membresFiles as $val => $membre){
                                                                     } else {
                                                                         $col['VALEUR'] = 'Non';
                                                                     }
-                                                                }
-                                                                else{
-                                                                    // Définition du libellé pour les dates 
+                                                                } else {
+                                                                    // Définition du libellé pour les dates
                                                                     if ('Date' === $col['TYPE']) {
                                                                         if ($col['VALEUR'] !== null) {
                                                                             $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
                                                                             $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                                                        }else{
-                                                                            $col['VALEUR']= "";
+                                                                        } else {
+                                                                            $col['VALEUR'] = "";
                                                                         }
                                                                     }
                                                                 }
@@ -251,8 +250,6 @@ foreach($this->membresFiles as $val => $membre){
                                                                 addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                                                 $idxCol++;
                                                             }
-                                                            
-                                                            
 
                                                             $segmentTableau->merge();
                                                         }
@@ -268,19 +265,18 @@ foreach($this->membresFiles as $val => $membre){
                                                         } else {
                                                             $champFils['VALEUR'] = 'Non';
                                                         }
-                                                    }
-                                                    else{
-                                                        // Définition du libellé pour les dates 
+                                                    } else {
+                                                        // Définition du libellé pour les dates
                                                         if ('Date' === $champFils['TYPE']) {
-                                                            if (!empty($champFils['VALEUR'])) {
+                                                            if ($champFils['VALEUR'] !== null) {
                                                                 $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
                                                                 $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                                            }else{
-                                                                $champFils['VALEUR']= "";
+                                                            } else {
+                                                                $champFils['VALEUR'] = "";
                                                             }
                                                         }
                                                     }
-                                                    
+
                                                     addChamp(
                                                         $dossInfos,
                                                         $serviceUtils->getFullFusionName(
@@ -303,19 +299,18 @@ foreach($this->membresFiles as $val => $membre){
                                                 } else {
                                                     $champ['VALEUR'] = 'Non';
                                                 }
-                                            }
-                                            else{
-                                                // Définition du libellé pour les dates 
+                                            } else {
+                                                // Définition du libellé pour les dates
                                                 if ('Date' === $champ['TYPE']) {
-                                                    if (!empty($champ['VALEUR'])) {
+                                                    if ($champ['VALEUR'] !== null) {
                                                         $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
                                                         $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                                    }else{
-                                                        $champ['VALEUR']= "";
+                                                    } else {
+                                                        $champ['VALEUR'] = "";
                                                     }
                                                 }
                                             }
-                                            
+
                                             addChamp(
                                                 $dossInfos,
                                                 $serviceUtils->getFullFusionName(
@@ -328,7 +323,6 @@ foreach($this->membresFiles as $val => $membre){
                                                 $champ['VALEUR']
                                             );
                                         }
-                                        
                                     }
                                 }
                             }
