--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -862,7 +862,7 @@ foreach ($this->formulaires as $formulaire) {
                                     addChamp($segmentTableau, sprintf('valeur%d', $index), '');
                                 }
                             }
-                            
+
                             $segmentTableau->merge();
                         } else {
                             foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -877,13 +877,13 @@ foreach ($this->formulaires as $formulaire) {
                                         }
                                     }
                                     else{
-                                        // Définition du libellé pour les dates 
+                                        // Définition du libellé pour les dates
                                         if ('Date' === $col['TYPE']) {
                                             if ($col['VALEUR'] !== null) {
                                                 $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
                                                 $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                            }else{
-                                                $col['VALEUR']= "";
+                                            } else {
+                                                $col['VALEUR'] = "";
                                             }
                                         }
                                     }
@@ -891,7 +891,6 @@ foreach ($this->formulaires as $formulaire) {
                                     addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                     $idxCol++;
                                 }
-                                
 
                                 $segmentTableau->merge();
                             }
@@ -907,15 +906,14 @@ foreach ($this->formulaires as $formulaire) {
                             } else {
                                 $champFils['VALEUR'] = 'Non';
                             }
-                        }
-                        else{
-                            // Définition du libellé pour les dates 
+                        } else {
+                            // Définition du libellé pour les dates
                             if ('Date' === $champFils['TYPE']) {
-                                if (!empty($champFils['VALEUR'])) {
+                                if ($champFils['VALEUR'] !== null) {
                                     $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
                                     $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                                }else{
-                                    $champFils['VALEUR']= "";
+                                } else {
+                                    $champFils['VALEUR'] = "";
                                 }
                             }
                         }
@@ -941,15 +939,14 @@ foreach ($this->formulaires as $formulaire) {
                     } else {
                         $champ['VALEUR'] = 'Non';
                     }
-                }
-                else{
-                    // Définition du libellé pour les dates 
+                } else {
+                    // Définition du libellé pour les dates
                     if ('Date' === $champ['TYPE']) {
-                        if (!empty($champ['VALEUR'])) {
+                        if ($champ['VALEUR'] !== null) {
                             $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
                             $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
-                        }else{
-                            $champ['VALEUR']= "";
+                        } else {
+                            $champ['VALEUR'] = "";
                         }
                     }
                 }
@@ -965,7 +962,7 @@ foreach ($this->formulaires as $formulaire) {
                     $champ['VALEUR']
                 );
             }
-            
+
         }
     }
 }
